# zotero-notebooklm

./: .env.example  .gitignore  README.md  pyproject.toml  skill.md
zotero_notebooklm/: cli.py
